--- a/Penktadienis.html
+++ b/Penktadienis.html
@@ -11,6 +11,7 @@
 <body>
     <p>mano penktadienio patikrinimas 10:59</p>
     <h2>mano bandymas pakeisti 11:06</h2>
+    <img src="" alt="">
 </body>
 
 </html>
