--- a/Penktadienis.html
+++ b/Penktadienis.html
@@ -12,6 +12,7 @@
     <p>mano penktadienio patikrinimas 10:59</p>
     <h2>mano bandymas pakeisti 11:06</h2>
     <img src="" alt="">
+    <h1>patikrinimas12:42</h1>
 </body>
 
 </html>
