--- a/Index_Sestadienis.html
+++ b/Index_Sestadienis.html
@@ -21,23 +21,32 @@
 
 <body>
     <!-- sm, md, lg -->
-        <!-- <div class="container-fluid"> platus konteineris -->
-        <div class="row">
-            <div class="col-12">
-                <p>HEADER
-                     ipsum dolor sit amet consectetur adipisicing elit. Laudantium nam esse tempore ea
+    <!-- <div class="container-fluid"> platus konteineris -->
+    <div class="row">
+        <div class="col-12">
+            <p>HEADER
+                ipsum dolor sit amet consectetur adipisicing elit. Laudantium nam esse tempore ea
                 nulla repellat ipsam officiis et ducimus autem eum eligendi, quis voluptatem fuga cum modi maiores
                 recusandae nemo?</p>
-            </div>
         </div>
-        <div class="container-btn">
-            <button type="button" class="btn btn-primary">Primary</button>
+    </div>
+    <div class="container-btn">
+        <button type="button" class="btn btn-primary">Primary</button>
 
-            <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-success">Success</button>
 
-            <button type="button" class="btn btn-warning">Warning</button>
-        </div>
- 
+        <button type="button" class="btn btn-warning">Warning</button>
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ipsum saepe illum vitae ullam soluta corrupti id
+        velit doloribus. Veniam ex, commodi tenetur culpa dolore nisi cumque adipisci praesentium nesciunt? Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Libero asperiores ducimus voluptates, mollitia nulla natus
+        inventore magni dignissimos quidem ad, illo vero? Consequuntur ipsum eveniet sint ex modi laborum nemo.
+        Labore dicta accusantium, possimus cum aspernatur ad cupiditate earum tempora inventore quas atque, dolorum
+        veniam recusandae reiciendis facere culpa exercitationem optio commodi asperiores mollitia dolores quibusdam
+        totam officia sapiente. Consequatur.
+    </div>
+
 
 
 
